setters and getters

--- a/testing_script.ipynb
+++ b/testing_script.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,9 @@
      "text": [
       "DMC 0 's output:  [2 2 2]\n",
       "DMC 1 's output:  [-2 -2 -2]\n",
-      "final output:  [-2 -2 -2]\n"
+      "final output:  [-2 -2 -2]\n",
+      "[[0, [1], 'PID', 25, [1, 0, 0], [20], [1, 1, 1]], [1, [], 'random', 10, [0, 10, 21], [10], array([2, 2, 2])]]\n",
+      "[[0, [1], 'PID', -100, [1, 0, 0], [20], [1, 1, 1]], [1, [], 'random', 10, [0, 10, 21], [10], array([2, 2, 2])]]\n"
      ]
     }
    ],
@@ -26,7 +28,14 @@
     "          [1, [], \"random\", 10, [0, 10, 21], [10], [5, 20, 100]],\n",
     "          ]\n",
     "\n",
-    "print(\"final output: \", DMC_structure(DMCarr).iterate())"
+    "struct = DMC_structure(DMCarr)\n",
+    "print(\"final output: \", struct.iterate())\n",
+    "\n",
+    "print(DMCarr)\n",
+    "\n",
+    "struct.setGoal(0, -100)\n",
+    "\n",
+    "print(DMCarr)"
    ]
   }
  ],
