Fixed small bugs

--- a/testing_script.ipynb
+++ b/testing_script.ipynb
@@ -9,11 +9,67 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DMC 0 's output:  [2 2 2]\n",
-      "DMC 1 's output:  [-2 -2 -2]\n",
-      "final output:  [-2 -2 -2]\n",
-      "[[0, [1], 'PID', 25, [1, 0, 0], [20], [1, 1, 1]], [1, [], 'random', 10, [0, 10, 21], [10], array([2, 2, 2])]]\n",
-      "[[0, [1], 'PID', -100, [1, 0, 0], [20], [1, 1, 1]], [1, [], 'random', 10, [0, 10, 21], [10], array([2, 2, 2])]]\n"
+      "DMC array:\n",
+      "\n",
+      "\n",
+      "Iteration:\n",
+      "\t arr  [0, [1], 'PID', 0, [0, 0, 0], [0], [10, 10, 10]]\n",
+      "\t Connect  [1]\n",
+      "[1]\n",
+      "DMC 0 's output:  [20 20 20]\n",
+      "\t arr  [1, [2], 'PID', 1, [1, 1, 1], [1], [10, 10, 10]]\n",
+      "\t Connect  [2]\n",
+      "[2]\n",
+      "DMC 1 's output:  [20 20 20]\n",
+      "\t arr  [2, [3], 'PID', 2, [2, 2, 2], [2], [10, 10, 10]]\n",
+      "\t Connect  [3]\n",
+      "[3]\n",
+      "DMC 2 's output:  [20 20 20]\n",
+      "\t arr  [2, [], 'PID', 2, [2, 2, 2], [2], [10, 10, 10]]\n",
+      "\t Connect  []\n",
+      "[]\n",
+      "DMC 3 's output:  [20 20 20]\n",
+      "[[10, 10, 10], array([20, 20, 20]), array([20, 20, 20]), array([20, 20, 20])]\n",
+      "final output  0 :  [20 20 20] \n",
+      "\n",
+      "\t arr  [0, [1], 'PID', 0, [0, 0, 0], [0], [10, 10, 10]]\n",
+      "\t Connect  [1]\n",
+      "[1]\n",
+      "DMC 0 's output:  [20 20 20]\n",
+      "\t arr  [1, [2], 'PID', 1, [1, 1, 1], [1], array([20, 20, 20])]\n",
+      "\t Connect  [2]\n",
+      "[2]\n",
+      "DMC 1 's output:  [40 40 40]\n",
+      "\t arr  [2, [3], 'PID', 2, [2, 2, 2], [2], array([20, 20, 20])]\n",
+      "\t Connect  [3]\n",
+      "[3]\n",
+      "DMC 2 's output:  [40 40 40]\n",
+      "\t arr  [2, [], 'PID', 2, [2, 2, 2], [2], array([20, 20, 20])]\n",
+      "\t Connect  []\n",
+      "[]\n",
+      "DMC 3 's output:  [40 40 40]\n",
+      "[[10, 10, 10], array([20, 20, 20]), array([40, 40, 40]), array([40, 40, 40])]\n",
+      "final output  1 :  [40 40 40] \n",
+      "\n",
+      "\t arr  [0, [1], 'PID', 0, [0, 0, 0], [0], [10, 10, 10]]\n",
+      "\t Connect  [1]\n",
+      "[1]\n",
+      "DMC 0 's output:  [20 20 20]\n",
+      "\t arr  [1, [2], 'PID', 1, [1, 1, 1], [1], array([20, 20, 20])]\n",
+      "\t Connect  [2]\n",
+      "[2]\n",
+      "DMC 1 's output:  [40 40 40]\n",
+      "\t arr  [2, [3], 'PID', 2, [2, 2, 2], [2], array([40, 40, 40])]\n",
+      "\t Connect  [3]\n",
+      "[3]\n",
+      "DMC 2 's output:  [80 80 80]\n",
+      "\t arr  [2, [], 'PID', 2, [2, 2, 2], [2], array([40, 40, 40])]\n",
+      "\t Connect  []\n",
+      "[]\n",
+      "DMC 3 's output:  [80 80 80]\n",
+      "[[10, 10, 10], array([20, 20, 20]), array([40, 40, 40]), array([80, 80, 80])]\n",
+      "final output  2 :  [80 80 80] \n",
+      "\n"
      ]
     }
    ],
@@ -24,18 +80,29 @@
     "# [DMC number, list that it points to, function type, goal, constraints, parameter, DMC input]\n",
     "# LAST ONE IS INPUT NOTTTT OUTPUT!!!!!\n",
     "# DMC output is what iterate() returns!!!\n",
-    "DMCarr = [[0, [1], \"PID\", 25, [1, 0, 0], [20], [1, 1, 1]],\n",
-    "          [1, [], \"random\", 10, [0, 10, 21], [10], [5, 20, 100]],\n",
-    "          ]\n",
+    "arrLen = 3\n",
     "\n",
+    "DMCarr = [[] for i in range(arrLen + 1)]\n",
+    "DMCarr[0] = [0, [1], \"PID\", 25, [1, 0, 0], [20], [1, 1, 1]]\n",
+    "\n",
+    "print(\"DMC array:\")\n",
+    "for i in range(arrLen):\n",
+    "    DMCarr[i] = [i, [i + 1], \"PID\", i, [i, i, i], [i], [10, 10, 10]]\n",
+    "\n",
+    "DMCarr[arrLen] = [i, [], \"PID\", i, [i, i, i], [i], [10, 10, 10]]\n",
+    "# print(DMCarr)\n",
     "struct = DMC_structure(DMCarr)\n",
-    "print(\"final output: \", struct.iterate())\n",
     "\n",
-    "print(DMCarr)\n",
+    "print(\"\\n\\nIteration:\")\n",
+    "for i in range(3):\n",
+    "    print(\"final output \", i, \": \", struct.iterate(), \"\\n\")\n",
+    "    \n",
     "\n",
-    "struct.setGoal(0, -100)\n",
+    "# print(DMCarr)\n",
     "\n",
-    "print(DMCarr)"
+    "# struct.setGoal(0, -100)\n",
+    "\n",
+    "# print(DMCarr)"
    ]
   }
  ],
