added link to mermaid

--- a/baseline_model.ipynb
+++ b/baseline_model.ipynb
@@ -74,7 +74,8 @@
     "graph LR\n",
     "    A[\"input [T, P, Keq]\"] --> B[\"DMC0\"] --> C[\"DMC1\"] --> D[\"output\"]\n",
     "```\n",
-    "\n",
+    "Note: If the visualization doesn't show, then you can preview mermaid graphs at the following link: https://mermaid.live/\n",
+    "The visualizations are simply an aid to the other explanations in this section.\n",
     "#### Visualization of information flow\n",
     "Below is a visualization of the information flow for the DMCs and agent. It covers everything mentioned above, in a graphical format.\n",
     "\n",
