--- a/intermediate_model.ipynb
+++ b/intermediate_model.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Baseline Model - Deep Neural Network Reinforcement Learning\n",
+    "# Intermediate Model - Deep Neural Network Reinforcement Learning\n",
     "\n",
     "The baseline model will train an agent to manipulate two DMC's in series to maximize production. Instead of building a Q-table, the agent will learn a policy by neural networks."
    ]
