temporary SAC update

--- a/intermediate_model.ipynb
+++ b/intermediate_model.ipynb
@@ -269,7 +269,7 @@
     "\n",
     "To use an analogy, the agent is the conductor, and the DMC's are musicians in the orchestra. The conductor cannot go and play the first violins themselves, but they can tell them what to play. The conductor needs to now explore and figure out how to make the best sound without breaking any instruments.\n",
     "\n",
-    "For the baseline model, we always start with the same intial conditions, and the simulation resets \"fresh\" every time. There is some random behavior within the DMC's. We will take a niave approach to \"exploration\" and will just explore random points."
+    "Once the simulation starts, we will keep on dynamically updating it based on the choices made. "
    ]
   },
   {
