finished intermediate_model

--- a/intermediate_model.ipynb
+++ b/intermediate_model.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -172,815 +172,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "Episode 1 reward: nan\n",
-      "Episode 1 Average episode reward: nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n",
-      "nan\n",
-      "nan nan\n"
+      "Episode 1 reward: -198776.21959348375\n",
+      "Episode 1 Average episode reward: -198776.21959348375\n",
+      "Episode 2 reward: -198597.8851645156\n",
+      "Episode 2 Average episode reward: -198687.05237899968\n",
+      "Change in average reward: 89.16721448407043\n",
+      "Episode 3 reward: -198922.07958262714\n",
+      "Episode 3 Average episode reward: -198765.39478020882\n",
+      "Change in average reward: -78.34240120914183\n",
+      "Episode 4 reward: -198788.68012518462\n",
+      "Episode 4 Average episode reward: -198771.21611645276\n",
+      "Change in average reward: -5.821336243941914\n",
+      "Episode 5 reward: -198771.78534539338\n",
+      "Episode 5 Average episode reward: -198771.32996224088\n",
+      "Change in average reward: -0.1138457881170325\n",
+      "Episode 6 reward: -198642.71438940061\n",
+      "Episode 6 Average episode reward: -198749.8940334342\n",
+      "Change in average reward: 21.435928806691663\n",
+      "Episode 7 reward: -198549.47494838905\n",
+      "Episode 7 Average episode reward: -198721.26273557058\n",
+      "Change in average reward: 28.631297863612417\n",
+      "Episode 8 reward: -198327.6766445854\n",
+      "Episode 8 Average episode reward: -198672.06447419742\n",
+      "Change in average reward: 49.19826137315249\n",
+      "Episode 9 reward: -198457.56676636724\n",
+      "Episode 9 Average episode reward: -198648.23139554964\n",
+      "Change in average reward: 23.83307864778908\n",
+      "Episode 10 reward: -198546.67219404795\n",
+      "Episode 10 Average episode reward: -198638.07547539947\n",
+      "Change in average reward: 10.155920150165912\n"
      ]
     }
    ],
@@ -1083,37 +310,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "history = simple_train_model(epochs=100, batch_size=32)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "running the optimal value search:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "optimal_dmc, optimal_reward = find_optimal_dmc(DMCarr, bounds)\n",
-    "print(\"Optimal DMC values:\", optimal_dmc)\n",
-    "print(\"Predicted optimal reward:\", optimal_reward)"
+    "## To Do\n",
+    "\n",
+    "- why is avg = reward?\n",
+    "- why is absurdly negative? fix reward\n",
+    "- run on GPU - why taking so long? rewrite packages for my PC, ice, or anika PC\n",
+    "- how do I actually extract the final correct policy?"
    ]
   },
   {
