--- a/final_model.ipynb
+++ b/final_model.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -163,19 +163,38 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "InvalidArgumentError",
-     "evalue": "cannot compute Mul as input #1(zero-based) was expected to be a double tensor but is a float tensor [Op:Mul]",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mInvalidArgumentError\u001b[0m                      Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[7], line 51\u001b[0m\n\u001b[0;32m     49\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m epoch \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(args[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mepochs\u001b[39m\u001b[38;5;124m'\u001b[39m]):\n\u001b[0;32m     50\u001b[0m     current_states, actions, rewards, next_states, ends \u001b[38;5;241m=\u001b[39m replay\u001b[38;5;241m.\u001b[39mfetch_sample(num_samples\u001b[38;5;241m=\u001b[39margs[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbatch_size\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[1;32m---> 51\u001b[0m     critic1_loss, critic2_loss, actor_loss, alpha_loss \u001b[38;5;241m=\u001b[39m \u001b[43msac\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtrain\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m     52\u001b[0m \u001b[43m        \u001b[49m\u001b[43mcurrent_states\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mactions\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrewards\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnext_states\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mends\u001b[49m\n\u001b[0;32m     53\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     55\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m args\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mverbose\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;28;01mFalse\u001b[39;00m):\n\u001b[0;32m     56\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEpisode \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mepisode\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, Global step \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mglobal_step\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, Epoch \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mepoch\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m:\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m     57\u001b[0m               critic1_loss\u001b[38;5;241m.\u001b[39mnumpy(), critic2_loss\u001b[38;5;241m.\u001b[39mnumpy(),\n\u001b[0;32m     58\u001b[0m               actor_loss\u001b[38;5;241m.\u001b[39mnumpy(), \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEpisode Reward: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mepisode_reward\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
-      "File \u001b[1;32mc:\\Users\\dista\\OneDrive - Georgia Institute of Technology\\_Sem 10\\CHBE 4803 AI for ChemE\\Project\\proc-control\\sac.py:272\u001b[0m, in \u001b[0;36mSoftActorCritic.train\u001b[1;34m(self, current_states, actions, rewards, next_states, ends)\u001b[0m\n\u001b[0;32m    269\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mtrain\u001b[39m(\u001b[38;5;28mself\u001b[39m, current_states, actions, rewards, next_states, ends):\n\u001b[0;32m    270\u001b[0m \n\u001b[0;32m    271\u001b[0m     \u001b[38;5;66;03m# Update Q network weights\u001b[39;00m\n\u001b[1;32m--> 272\u001b[0m     critic1_loss, critic2_loss \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mupdate_q_network\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcurrent_states\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mactions\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrewards\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnext_states\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mends\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    274\u001b[0m     \u001b[38;5;66;03m# Update policy network weights\u001b[39;00m\n\u001b[0;32m    275\u001b[0m     actor_loss \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mupdate_policy_network(current_states)\n",
-      "File \u001b[1;32mc:\\Users\\dista\\OneDrive - Georgia Institute of Technology\\_Sem 10\\CHBE 4803 AI for ChemE\\Project\\proc-control\\sac.py:176\u001b[0m, in \u001b[0;36mSoftActorCritic.update_q_network\u001b[1;34m(self, current_states, actions, rewards, next_states, ends)\u001b[0m\n\u001b[0;32m    173\u001b[0m min_q_target \u001b[38;5;241m=\u001b[39m tf\u001b[38;5;241m.\u001b[39mminimum(q1_target, q2_target)\n\u001b[0;32m    175\u001b[0m \u001b[38;5;66;03m# Add the entropy term to get soft Q target\u001b[39;00m\n\u001b[1;32m--> 176\u001b[0m soft_q_target \u001b[38;5;241m=\u001b[39m min_q_target \u001b[38;5;241m-\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43malpha\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mlog_pi_a\u001b[49m\n\u001b[0;32m    177\u001b[0m y \u001b[38;5;241m=\u001b[39m tf\u001b[38;5;241m.\u001b[39mstop_gradient(rewards \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mgamma \u001b[38;5;241m*\u001b[39m ends \u001b[38;5;241m*\u001b[39m soft_q_target)\n\u001b[0;32m    179\u001b[0m critic1_loss \u001b[38;5;241m=\u001b[39m tf\u001b[38;5;241m.\u001b[39mreduce_mean((q1 \u001b[38;5;241m-\u001b[39m y)\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m2\u001b[39m)\n",
-      "File \u001b[1;32mc:\\Users\\dista\\OneDrive - Georgia Institute of Technology\\_Sem 10\\CHBE 4803 AI for ChemE\\Project\\proc-control\\venv_tf210\\lib\\site-packages\\tensorflow\\python\\ops\\variables.py:1074\u001b[0m, in \u001b[0;36mVariable._OverloadOperator.<locals>._run_op\u001b[1;34m(a, *args, **kwargs)\u001b[0m\n\u001b[0;32m   1072\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21m_run_op\u001b[39m(a, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[0;32m   1073\u001b[0m   \u001b[38;5;66;03m# pylint: disable=protected-access\u001b[39;00m\n\u001b[1;32m-> 1074\u001b[0m   \u001b[38;5;28;01mreturn\u001b[39;00m tensor_oper(a\u001b[38;5;241m.\u001b[39mvalue(), \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
-      "File \u001b[1;32mc:\\Users\\dista\\OneDrive - Georgia Institute of Technology\\_Sem 10\\CHBE 4803 AI for ChemE\\Project\\proc-control\\venv_tf210\\lib\\site-packages\\tensorflow\\python\\util\\traceback_utils.py:153\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    151\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[0;32m    152\u001b[0m   filtered_tb \u001b[38;5;241m=\u001b[39m _process_traceback_frames(e\u001b[38;5;241m.\u001b[39m__traceback__)\n\u001b[1;32m--> 153\u001b[0m   \u001b[38;5;28;01mraise\u001b[39;00m e\u001b[38;5;241m.\u001b[39mwith_traceback(filtered_tb) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m    154\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[0;32m    155\u001b[0m   \u001b[38;5;28;01mdel\u001b[39;00m filtered_tb\n",
-      "File \u001b[1;32mc:\\Users\\dista\\OneDrive - Georgia Institute of Technology\\_Sem 10\\CHBE 4803 AI for ChemE\\Project\\proc-control\\venv_tf210\\lib\\site-packages\\tensorflow\\python\\framework\\ops.py:7209\u001b[0m, in \u001b[0;36mraise_from_not_ok_status\u001b[1;34m(e, name)\u001b[0m\n\u001b[0;32m   7207\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mraise_from_not_ok_status\u001b[39m(e, name):\n\u001b[0;32m   7208\u001b[0m   e\u001b[38;5;241m.\u001b[39mmessage \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m (\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m name: \u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m name \u001b[38;5;28;01mif\u001b[39;00m name \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m-> 7209\u001b[0m   \u001b[38;5;28;01mraise\u001b[39;00m core\u001b[38;5;241m.\u001b[39m_status_to_exception(e) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m\n",
-      "\u001b[1;31mInvalidArgumentError\u001b[0m: cannot compute Mul as input #1(zero-based) was expected to be a double tensor but is a float tensor [Op:Mul]"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Episode 1 reward: -198602.1341365208\n",
+      "Episode 1 Average episode reward: -198602.1341365208\n",
+      "Episode 2 reward: nan\n",
+      "Episode 2 Average episode reward: nan\n",
+      "Change in average reward: nan\n",
+      "Episode 3 reward: nan\n",
+      "Episode 3 Average episode reward: nan\n",
+      "Change in average reward: nan\n",
+      "Episode 4 reward: nan\n",
+      "Episode 4 Average episode reward: nan\n",
+      "Change in average reward: nan\n",
+      "Episode 5 reward: nan\n",
+      "Episode 5 Average episode reward: nan\n",
+      "Change in average reward: nan\n",
+      "Episode 6 reward: nan\n",
+      "Episode 6 Average episode reward: nan\n",
+      "Change in average reward: nan\n",
+      "Episode 7 reward: nan\n",
+      "Episode 7 Average episode reward: nan\n",
+      "Change in average reward: nan\n",
+      "Episode 8 reward: nan\n",
+      "Episode 8 Average episode reward: nan\n",
+      "Change in average reward: nan\n",
+      "Episode 9 reward: nan\n",
+      "Episode 9 Average episode reward: nan\n",
+      "Change in average reward: nan\n",
+      "Episode 10 reward: nan\n",
+      "Episode 10 Average episode reward: nan\n",
+      "Change in average reward: nan\n"
      ]
     }
    ],
